HISTORY

0.24 - ??

	- Fix segfault on invoking 'camera' command with no arg.

	- Add 'camera off' command.

0.23 - 2009-02-05

	- Fix support for 64bit systems

	- Fix build of X ui on systems where AC_CHECK_X
	  doesn't set x_libraries and x_includes

	- Added history support for curses UI.

	- Initial camera support.

	- Cleaned up for GNU coding standard acceptance.

0.22
	- Code development put under CVS.
	  See ChangeLog for news.

0.21
	- utils/makepictset improved [ ahahah ;) ]

	- ui_picts.h:
		default pictset copied from spheres_8x8 (I think this
		is the best apart from players' number recognition)

	- mod_wall.c:
		added a bare wall support module
		now usable but very very boring interface

	- arena.c:
		added range check in arenaput and arenaget

	- ui_X.c:
		o Bug fixed in ui_drawarena when configured to use
		  arenawin pixmap (USE_ARENAWIN_PIXMAP). Now is
		  pretty faster ..
		o more cleanup in ui_finish()
		o better handling of keyboard states (no more
		  private control of `shift' pressed, use of
		  xevent.state instead)

0.20
	- ui_X.c:
		o arenagc tile pixmap is set by send_pictset.
		  now init_background just fills the window or
		  the arenawin pixmap (no more clear to permit
		  working on the pixmap)...
		o define USE_AFTER_FUNCTION renamed to DEBUG_X_PROTOCOL
		o XSync called after arenawin mapping to discard all
		  pending events thus avoiding a big Expose at startup

0.19
	- arena.c:
		BUG_FIX: arena.board initialized with all zeroes.

	- ui_X.c:
		o default font definition changed to "*-misc-*".
		o modified send_pictset so to reduce ChangeGC protocol
		  requests to the server. Also incorporates draw_pict
		  ( used exclusively by send_pictset anyway ).
		o added define REDRAW_ARENA_ON_PICTSET_CHANGE
		  so you can reduce network traffic undefining it
		o added USE_AFTER_FUNCTION as a bare Xprotocol
		  traffic checker
		o create_arenawin(): pixmap used for the cursor
		  is freed after use